tests/ui/traits/object-does-not-impl-trait.stderr
error[E0277]: the trait bound `Box<dyn Foo>: Foo` is not satisfied
  --> $DIR/object-does-not-impl-trait.rs:6:44
   |
LL | fn take_object(f: Box<dyn Foo>) { take_foo(f); }
   |                                   -------- ^ the trait `Foo` is not implemented for `Box<dyn Foo>`
   |                                   |
   |                                   required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/object-does-not-impl-trait.rs:4:1
   |
LL | trait Foo {}
   | ^^^^^^^^^
note: required by a bound in `take_foo`
  --> $DIR/object-does-not-impl-trait.rs:5:15
   |
LL | fn take_foo<F:Foo>(f: F) {}
   |               ^^^ required by this bound in `take_foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
